<resources>
    <string name="preference_key">com.stauss.simon.stundenplan.config</string>

    <string name="app_name">Stundenplan</string>
    <string name="schedule">Stundenplan</string>
    <string name="homework">Hausaufgaben</string>

    <string name="welcome1">Herzlich Willkommen zu der Stundenplan-App!</string>
    <string name="welcome2">Hier wirst du nun deinen Stundenplan eintragen und weitere Einstellungen treffen können!</string>
    <string name="welcome3">Trage nun in die Box unten bitte deinen Namen ein und bestätige.</string>
    <string name="name_hint">Trage hier bitte deinen Namen ein</string>

    <string name="schedule_edit_header">Dein Stundenplan für %DAY%</string>
    <string name="schedule_lesson">Stunde</string>
    <string name="schedule_subject">Fach</string>
    <string name="schedule_room">Raum</string>

    <string name="userName">Max Mustermann</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_today">Heute</string>
    <string name="nav_edit_schedule">Stundenplan bearbeiten</string>
    <string name="nav_overview">Übersicht</string>
    <string name="nav_addHomework">Hausaufgabe hinzufügen</string>

    <string name="schedule_today">Deine Fächer heute sind: </string>
    <string name="title_activity_schedule_edit">ScheduleEdit</string>
    <string name="title_activity_schedule_overview">ScheduleOverview</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="select_subject">Wähle ein Fach aus</string>
    <string name="select_date">Wähle aus, bis wann die Hausaufgabe gemacht werden muss</string>
    <string name="select_date_hint">Wähle ein Datum aus</string>
    <string name="open_datePicker">Datum Wählen</string>
    <string name="homework_desc_hint">Trage hier die Hausaufgabe ein (z.B. S.220 Nr.17)</string>
    <string name="save">Speichern</string>
    <string name="blocked_characters">;</string>
    <string name="error_not_filled">Bitte fülle alle Felder aus!</string>
    <string name="error_char_not_allowed">Das Zeichen ";" ist nicht erlaubt!</string>
    <string name="homework_success">Hausaufgabe wurde erfolgreich hinzugefügt!</string>

    <string name="homework_done">Erledigt?</string>
    <string name="no_homework">Du hast gerade keine Hausaufgaben!</string>
    <string name="ask_clear_homework">Willst du wirklich alle Hausaufgaben löschen?</string>
    <string name="homework_cleared">Alle Hausaufgaben wurden gelöscht!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
