<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleTodayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:visibility="visible"
            tools:text="@string/schedule_today" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="0"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

                <TextView
                    android:id="@+id/tableHours"
                    android:layout_column="0"
                    android:layout_marginLeft="20px"
                    android:text="@string/schedule_lesson"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tableSubject"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:text="@string/schedule_subject"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tableRoom"
                    android:layout_column="2"
                    android:layout_marginRight="50px"
                    android:text="@string/schedule_room"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>


        </TableLayout>

    </LinearLayout>
</FrameLayout>