<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ScheduleEdit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule_edit_header"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="0"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:id="@+id/tableHours"
                        android:layout_column="0"
                        android:layout_marginLeft="20px"
                        android:text="@string/schedule_lesson"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tableSubject"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/schedule_subject"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tableRoom"
                        android:layout_column="2"
                        android:layout_marginRight="50px"
                        android:text="@string/schedule_room"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </TableRow>


            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Weiter" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>